src/objects/Patent__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Enforcement_Date__c</fullName>
        <label>Actual Enforcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CWV_Enforcement_Date__c</fullName>
        <label>CWV Enforcement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customs_Status__c</fullName>
        <label>Customs Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventor__c</fullName>
        <label>Inventor(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Case__c</fullName>
        <label>Legal Case</label>
        <referenceTo>Legal_Case__c</referenceTo>
        <relationshipLabel>Patents</relationshipLabel>
        <relationshipName>Patents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Link_to_Patent__c</fullName>
        <label>Link to Patent</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Motorola_SME_Core_ID__c</fullName>
        <label>Motorola SME Core ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motorola_SME_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Motorola SME Name</label>
        <referenceTo>Motorola_Core_Directory__c</referenceTo>
        <relationshipLabel>Patents</relationshipLabel>
        <relationshipName>Patents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patent_Abstract__c</fullName>
        <label>Patent Abstract</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Patent_Expiration_Date__c</fullName>
        <label>Patent Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patent_Grant_Date__c</fullName>
        <label>Patent Grant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patent_Name__c</fullName>
        <label>Patent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patent_Number__c</fullName>
        <label>Patent Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Patent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Patent Short Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>